src/plugins/data/public/antlr/promql/.generated/PromQLParser.ts
// Generated from ./src/plugins/data/public/antlr/promql/grammar/PromQLParser.g4 by ANTLR 4.13.1

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { PromQLParserVisitor } from "./PromQLParserVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class PromQLParser extends antlr.Parser {
    public static readonly NUMBER = 1;
    public static readonly STRING = 2;
    public static readonly ADD = 3;
    public static readonly SUB = 4;
    public static readonly MULT = 5;
    public static readonly DIV = 6;
    public static readonly MOD = 7;
    public static readonly POW = 8;
    public static readonly AND = 9;
    public static readonly OR = 10;
    public static readonly UNLESS = 11;
    public static readonly EQ = 12;
    public static readonly DEQ = 13;
    public static readonly NE = 14;
    public static readonly GT = 15;
    public static readonly LT = 16;
    public static readonly GE = 17;
    public static readonly LE = 18;
    public static readonly RE = 19;
    public static readonly NRE = 20;
    public static readonly BY = 21;
    public static readonly WITHOUT = 22;
    public static readonly ON = 23;
    public static readonly IGNORING = 24;
    public static readonly GROUP_LEFT = 25;
    public static readonly GROUP_RIGHT = 26;
    public static readonly OFFSET = 27;
    public static readonly BOOL = 28;
    public static readonly AGGREGATION_OPERATOR = 29;
    public static readonly FUNCTION = 30;
    public static readonly LEFT_BRACE = 31;
    public static readonly RIGHT_BRACE = 32;
    public static readonly LEFT_PAREN = 33;
    public static readonly RIGHT_PAREN = 34;
    public static readonly LEFT_BRACKET = 35;
    public static readonly RIGHT_BRACKET = 36;
    public static readonly COMMA = 37;
    public static readonly COLON = 38;
    public static readonly AT = 39;
    public static readonly DURATION = 40;
    public static readonly METRIC_NAME = 41;
    public static readonly LABEL_NAME = 42;
    public static readonly WS = 43;
    public static readonly SL_COMMENT = 44;
    public static readonly RULE_expression = 0;
    public static readonly RULE_vectorOperation = 1;
    public static readonly RULE_unaryOp = 2;
    public static readonly RULE_powOp = 3;
    public static readonly RULE_multOp = 4;
    public static readonly RULE_addOp = 5;
    public static readonly RULE_compareOp = 6;
    public static readonly RULE_andUnlessOp = 7;
    public static readonly RULE_orOp = 8;
    public static readonly RULE_vectorMatchOp = 9;
    public static readonly RULE_subqueryOp = 10;
    public static readonly RULE_offsetOp = 11;
    public static readonly RULE_vector = 12;
    public static readonly RULE_parens = 13;
    public static readonly RULE_metricName = 14;
    public static readonly RULE_instantSelector = 15;
    public static readonly RULE_labelMatcher = 16;
    public static readonly RULE_labelValue = 17;
    public static readonly RULE_labelMatcherOperator = 18;
    public static readonly RULE_labelMatcherList = 19;
    public static readonly RULE_matrixSelector = 20;
    public static readonly RULE_timeRange = 21;
    public static readonly RULE_subqueryRange = 22;
    public static readonly RULE_duration = 23;
    public static readonly RULE_offset = 24;
    public static readonly RULE_function = 25;
    public static readonly RULE_parameter = 26;
    public static readonly RULE_parameterList = 27;
    public static readonly RULE_functionNames = 28;
    public static readonly RULE_aggregation = 29;
    public static readonly RULE_by = 30;
    public static readonly RULE_without = 31;
    public static readonly RULE_aggregationOperators = 32;
    public static readonly RULE_grouping = 33;
    public static readonly RULE_on_ = 34;
    public static readonly RULE_ignoring = 35;
    public static readonly RULE_groupLeft = 36;
    public static readonly RULE_groupRight = 37;
    public static readonly RULE_labelName = 38;
    public static readonly RULE_labelNameList = 39;
    public static readonly RULE_keyword = 40;
    public static readonly RULE_literal = 41;

    public static readonly literalNames = [
        null, null, null, "'+'", "'-'", "'*'", "'/'", "'%'", "'^'", "'and'", 
        "'or'", "'unless'", "'='", "'=='", "'!='", "'>'", "'<'", "'>='", 
        "'<='", "'=~'", "'!~'", "'by'", "'without'", "'on'", "'ignoring'", 
        "'group_left'", "'group_right'", "'offset'", "'bool'", null, null, 
        "'{'", "'}'", "'('", "')'", "'['", "']'", "','", "':'", "'@'"
    ];

    public static readonly symbolicNames = [
        null, "NUMBER", "STRING", "ADD", "SUB", "MULT", "DIV", "MOD", "POW", 
        "AND", "OR", "UNLESS", "EQ", "DEQ", "NE", "GT", "LT", "GE", "LE", 
        "RE", "NRE", "BY", "WITHOUT", "ON", "IGNORING", "GROUP_LEFT", "GROUP_RIGHT", 
        "OFFSET", "BOOL", "AGGREGATION_OPERATOR", "FUNCTION", "LEFT_BRACE", 
        "RIGHT_BRACE", "LEFT_PAREN", "RIGHT_PAREN", "LEFT_BRACKET", "RIGHT_BRACKET", 
        "COMMA", "COLON", "AT", "DURATION", "METRIC_NAME", "LABEL_NAME", 
        "WS", "SL_COMMENT"
    ];
    public static readonly ruleNames = [
        "expression", "vectorOperation", "unaryOp", "powOp", "multOp", "addOp", 
        "compareOp", "andUnlessOp", "orOp", "vectorMatchOp", "subqueryOp", 
        "offsetOp", "vector", "parens", "metricName", "instantSelector", 
        "labelMatcher", "labelValue", "labelMatcherOperator", "labelMatcherList", 
        "matrixSelector", "timeRange", "subqueryRange", "duration", "offset", 
        "function", "parameter", "parameterList", "functionNames", "aggregation", 
        "by", "without", "aggregationOperators", "grouping", "on_", "ignoring", 
        "groupLeft", "groupRight", "labelName", "labelNameList", "keyword", 
        "literal",
    ];

    public get grammarFileName(): string { return "PromQLParser.g4"; }
    public get literalNames(): (string | null)[] { return PromQLParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return PromQLParser.symbolicNames; }
    public get ruleNames(): string[] { return PromQLParser.ruleNames; }
    public get serializedATN(): number[] { return PromQLParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, PromQLParser._ATN, PromQLParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public expression(): ExpressionContext {
        let localContext = new ExpressionContext(this.context, this.state);
        this.enterRule(localContext, 0, PromQLParser.RULE_expression);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 84;
            this.vectorOperation(0);
            this.state = 85;
            this.match(PromQLParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }

    public vectorOperation(): VectorOperationContext;
    public vectorOperation(_p: number): VectorOperationContext;
    public vectorOperation(_p?: number): VectorOperationContext {
        if (_p === undefined) {
            _p = 0;
        }

        let parentContext = this.context;
        let parentState = this.state;
        let localContext = new VectorOperationContext(this.context, parentState);
        let previousContext = localContext;
        let _startState = 2;
        this.enterRecursionRule(localContext, 2, PromQLParser.RULE_vectorOperation, _p);
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 92;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case PromQLParser.ADD:
            case PromQLParser.SUB:
                {
                this.state = 88;
                this.unaryOp();
                this.state = 89;
                this.vectorOperation(9);
                }
                break;
            case PromQLParser.NUMBER:
            case PromQLParser.STRING:
            case PromQLParser.AGGREGATION_OPERATOR:
            case PromQLParser.FUNCTION:
            case PromQLParser.LEFT_BRACE:
            case PromQLParser.LEFT_PAREN:
            case PromQLParser.METRIC_NAME:
                {
                this.state = 91;
                this.vector();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
            this.context!.stop = this.tokenStream.LT(-1);
            this.state = 129;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 2, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    if (this.parseListeners != null) {
                        this.triggerExitRuleEvent();
                    }
                    previousContext = localContext;
                    {
                    this.state = 127;
                    this.errorHandler.sync(this);
                    switch (this.interpreter.adaptivePredict(this.tokenStream, 1, this.context) ) {
                    case 1:
                        {
                        localContext = new VectorOperationContext(parentContext, parentState);
                        this.pushNewRecursionContext(localContext, _startState, PromQLParser.RULE_vectorOperation);
                        this.state = 94;
                        if (!(this.precpred(this.context, 11))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 11)");
                        }
                        this.state = 95;
                        this.powOp();
                        this.state = 96;
                        this.vectorOperation(11);
                        }
                        break;
                    case 2:
                        {
                        localContext = new VectorOperationContext(parentContext, parentState);
                        this.pushNewRecursionContext(localContext, _startState, PromQLParser.RULE_vectorOperation);
                        this.state = 98;
                        if (!(this.precpred(this.context, 8))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 8)");
                        }
                        this.state = 99;
                        this.multOp();
                        this.state = 100;
                        this.vectorOperation(9);
                        }
                        break;
                    case 3:
                        {
                        localContext = new VectorOperationContext(parentContext, parentState);
                        this.pushNewRecursionContext(localContext, _startState, PromQLParser.RULE_vectorOperation);
                        this.state = 102;
                        if (!(this.precpred(this.context, 7))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 7)");
                        }
                        this.state = 103;
                        this.addOp();
                        this.state = 104;
                        this.vectorOperation(8);
                        }
                        break;
                    case 4:
                        {
                        localContext = new VectorOperationContext(parentContext, parentState);
                        this.pushNewRecursionContext(localContext, _startState, PromQLParser.RULE_vectorOperation);
                        this.state = 106;
                        if (!(this.precpred(this.context, 6))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 6)");
                        }
                        this.state = 107;
                        this.compareOp();
                        this.state = 108;
                        this.vectorOperation(7);
                        }
                        break;
                    case 5:
                        {
                        localContext = new VectorOperationContext(parentContext, parentState);
                        this.pushNewRecursionContext(localContext, _startState, PromQLParser.RULE_vectorOperation);
                        this.state = 110;
                        if (!(this.precpred(this.context, 5))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 5)");
                        }
                        this.state = 111;
                        this.andUnlessOp();
                        this.state = 112;
                        this.vectorOperation(6);
                        }
                        break;
                    case 6:
                        {
                        localContext = new VectorOperationContext(parentContext, parentState);
                        this.pushNewRecursionContext(localContext, _startState, PromQLParser.RULE_vectorOperation);
                        this.state = 114;
                        if (!(this.precpred(this.context, 4))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 4)");
                        }
                        this.state = 115;
                        this.orOp();
                        this.state = 116;
                        this.vectorOperation(5);
                        }
                        break;
                    case 7:
                        {
                        localContext = new VectorOperationContext(parentContext, parentState);
                        this.pushNewRecursionContext(localContext, _startState, PromQLParser.RULE_vectorOperation);
                        this.state = 118;
                        if (!(this.precpred(this.context, 3))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 3)");
                        }
                        this.state = 119;
                        this.vectorMatchOp();
                        this.state = 120;
                        this.vectorOperation(4);
                        }
                        break;
                    case 8:
                        {
                        localContext = new VectorOperationContext(parentContext, parentState);
                        this.pushNewRecursionContext(localContext, _startState, PromQLParser.RULE_vectorOperation);
                        this.state = 122;
                        if (!(this.precpred(this.context, 2))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 2)");
                        }
                        this.state = 123;
                        this.match(PromQLParser.AT);
                        this.state = 124;
                        this.vectorOperation(3);
                        }
                        break;
                    case 9:
                        {
                        localContext = new VectorOperationContext(parentContext, parentState);
                        this.pushNewRecursionContext(localContext, _startState, PromQLParser.RULE_vectorOperation);
                        this.state = 125;
                        if (!(this.precpred(this.context, 10))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 10)");
                        }
                        this.state = 126;
                        this.subqueryOp();
                        }
                        break;
                    }
                    }
                }
                this.state = 131;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 2, this.context);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.unrollRecursionContexts(parentContext);
        }
        return localContext;
    }
    public unaryOp(): UnaryOpContext {
        let localContext = new UnaryOpContext(this.context, this.state);
        this.enterRule(localContext, 4, PromQLParser.RULE_unaryOp);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 132;
            _la = this.tokenStream.LA(1);
            if(!(_la === 3 || _la === 4)) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public powOp(): PowOpContext {
        let localContext = new PowOpContext(this.context, this.state);
        this.enterRule(localContext, 6, PromQLParser.RULE_powOp);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 134;
            this.match(PromQLParser.POW);
            this.state = 136;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 23 || _la === 24) {
                {
                this.state = 135;
                this.grouping();
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public multOp(): MultOpContext {
        let localContext = new MultOpContext(this.context, this.state);
        this.enterRule(localContext, 8, PromQLParser.RULE_multOp);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 138;
            _la = this.tokenStream.LA(1);
            if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 224) !== 0))) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            this.state = 140;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 23 || _la === 24) {
                {
                this.state = 139;
                this.grouping();
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public addOp(): AddOpContext {
        let localContext = new AddOpContext(this.context, this.state);
        this.enterRule(localContext, 10, PromQLParser.RULE_addOp);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 142;
            _la = this.tokenStream.LA(1);
            if(!(_la === 3 || _la === 4)) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            this.state = 144;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 23 || _la === 24) {
                {
                this.state = 143;
                this.grouping();
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public compareOp(): CompareOpContext {
        let localContext = new CompareOpContext(this.context, this.state);
        this.enterRule(localContext, 12, PromQLParser.RULE_compareOp);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 146;
            _la = this.tokenStream.LA(1);
            if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 516096) !== 0))) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            this.state = 148;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 28) {
                {
                this.state = 147;
                this.match(PromQLParser.BOOL);
                }
            }

            this.state = 151;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 23 || _la === 24) {
                {
                this.state = 150;
                this.grouping();
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public andUnlessOp(): AndUnlessOpContext {
        let localContext = new AndUnlessOpContext(this.context, this.state);
        this.enterRule(localContext, 14, PromQLParser.RULE_andUnlessOp);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 153;
            _la = this.tokenStream.LA(1);
            if(!(_la === 9 || _la === 11)) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            this.state = 155;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 23 || _la === 24) {
                {
                this.state = 154;
                this.grouping();
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public orOp(): OrOpContext {
        let localContext = new OrOpContext(this.context, this.state);
        this.enterRule(localContext, 16, PromQLParser.RULE_orOp);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 157;
            this.match(PromQLParser.OR);
            this.state = 159;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 23 || _la === 24) {
                {
                this.state = 158;
                this.grouping();
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public vectorMatchOp(): VectorMatchOpContext {
        let localContext = new VectorMatchOpContext(this.context, this.state);
        this.enterRule(localContext, 18, PromQLParser.RULE_vectorMatchOp);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 161;
            _la = this.tokenStream.LA(1);
            if(!(_la === 11 || _la === 23)) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            this.state = 163;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 23 || _la === 24) {
                {
                this.state = 162;
                this.grouping();
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public subqueryOp(): SubqueryOpContext {
        let localContext = new SubqueryOpContext(this.context, this.state);
        this.enterRule(localContext, 20, PromQLParser.RULE_subqueryOp);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 165;
            this.subqueryRange();
            this.state = 167;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 11, this.context) ) {
            case 1:
                {
                this.state = 166;
                this.offsetOp();
                }
                break;
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public offsetOp(): OffsetOpContext {
        let localContext = new OffsetOpContext(this.context, this.state);
        this.enterRule(localContext, 22, PromQLParser.RULE_offsetOp);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 169;
            this.match(PromQLParser.OFFSET);
            this.state = 170;
            this.duration();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public vector(): VectorContext {
        let localContext = new VectorContext(this.context, this.state);
        this.enterRule(localContext, 24, PromQLParser.RULE_vector);
        try {
            this.state = 179;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 12, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 172;
                this.function_();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 173;
                this.aggregation();
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 174;
                this.instantSelector();
                }
                break;
            case 4:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 175;
                this.matrixSelector();
                }
                break;
            case 5:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 176;
                this.offset();
                }
                break;
            case 6:
                this.enterOuterAlt(localContext, 6);
                {
                this.state = 177;
                this.literal();
                }
                break;
            case 7:
                this.enterOuterAlt(localContext, 7);
                {
                this.state = 178;
                this.parens();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public parens(): ParensContext {
        let localContext = new ParensContext(this.context, this.state);
        this.enterRule(localContext, 26, PromQLParser.RULE_parens);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 181;
            this.match(PromQLParser.LEFT_PAREN);
            this.state = 182;
            this.vectorOperation(0);
            this.state = 183;
            this.match(PromQLParser.RIGHT_PAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public metricName(): MetricNameContext {
        let localContext = new MetricNameContext(this.context, this.state);
        this.enterRule(localContext, 28, PromQLParser.RULE_metricName);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 185;
            this.match(PromQLParser.METRIC_NAME);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public instantSelector(): InstantSelectorContext {
        let localContext = new InstantSelectorContext(this.context, this.state);
        this.enterRule(localContext, 30, PromQLParser.RULE_instantSelector);
        let _la: number;
        try {
            this.state = 199;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case PromQLParser.METRIC_NAME:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 187;
                this.metricName();
                this.state = 193;
                this.errorHandler.sync(this);
                switch (this.interpreter.adaptivePredict(this.tokenStream, 14, this.context) ) {
                case 1:
                    {
                    this.state = 188;
                    this.match(PromQLParser.LEFT_BRACE);
                    this.state = 190;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                    if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 2145390080) !== 0) || _la === 41 || _la === 42) {
                        {
                        this.state = 189;
                        this.labelMatcherList();
                        }
                    }
